--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="headshot">
-                <img src="images/hero-headshot.webp" alt="hero headshot">
+                <img src="images/Ariful_Islam Photo.jpg" alt="hero headshot">
             </div>
         </section>
 
