Re-pushed entire project with updates

--- a/index.html
+++ b/index.html
@@ -46,22 +46,19 @@
         <!-- Hero section -->
         <section class="hero-section">
             <div class="text">
-                <h2>Hi, I'm Habib.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad deleniti nemo quos ex tenetur fuga, id
-                    fugit dolores animi saepe error placeat, quibusdam atque tempore dignissimos eum ipsa! Eligendi
-                    commodi eveniet veritatis! Tempore, incidunt quam tempora, suscipit, beatae molestiae ea fugiat
-                    libero similique ratione quisquam adipisci officia aspernatur delectus eius.</p>
+                <h2>Hi, I'm Ariful Islam.</h2>
+                <p>I am a passionate and dedicated individual with a knack for turning ideas into impactful solutions. With a background in software development and data analysis, I thrive on solving challenges and creating meaningful experiences. I believe in continuous learning and innovation, which drives my journey toward achieving both personal and professional excellence. My goal is to make a difference in technology and education, contributing to a brighter and smarter future.</p>
 
                 <div class="links">
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/arifulislamjihad" target="_blank">
                         <i class="fa-brands fa-github"></i>
                         <span>GitHub</span>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/arifulislamjihad/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="arifulupsi@gmail.com" target="_blank">
                         <i class="fa-solid fa-envelope"></i>
                         <span>Email</span>
                     </a>
